make the java code 1.8 compliant